// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP bsCJLc"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP eVBHNn"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP bUuDvx"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          dir="rtl"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fkFYRF breKGv"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP frGBNm"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP dtTXWp"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP jEcNzC"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja kgATBq"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
